[phonebook][fix] -  position mobile, tablet and windows

--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -115,6 +115,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .contacts {
+    gap: 10px;
+  }
   .contacts__name {
     font-size: 23px;
   }
